style overhauls and week 4 launch

--- a/01.html
+++ b/01.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note1" style="text-indent:-2px">♫</div>	Anri – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">悲しみが止まらない</a> ↗</p>
+	<p><div class="note note1 musicnote">♫</div>	Anri – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">悲しみが止まらない</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
