--- a/02.html
+++ b/02.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note1" style="text-indent:-2px">♫</div>	Akiko Yano – <a href="https://open.spotify.com/track/12HduUydL4ITzch9Rei3lt?si=4b7810ec36b64c6a" target="_blank">ただいま</a> ↗</p>
+	<p><div class="note note1 musicnote">♫</div>	矢野 顕子 – <a href="https://open.spotify.com/track/12HduUydL4ITzch9Rei3lt?si=4b7810ec36b64c6a" target="_blank">ただいま</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
