--- a/03.html
+++ b/03.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note1" style="text-indent:-2px">♫</div>	GO!GO!7188 – <a href="https://open.spotify.com/track/4dbYEeyp0Ercj2zBp5x8Xh?si=655ebbea4a9746de" target="_blank">ジェットにんぢん</a> ↗</p>
+	<p><div class="note note1 musicnote">♫</div>	GO!GO!7188 – <a href="https://open.spotify.com/track/4dbYEeyp0Ercj2zBp5x8Xh?si=655ebbea4a9746de" target="_blank">ジェットにんぢん</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
