--- a/04.html
+++ b/04.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note2" style="text-indent:-2px">♫</div>	The Pillows – <a href="https://open.spotify.com/track/20H0fLyAOHzyyfcJlSWlFS?si=5549256a82164533" target="_blank">My Girl</a> ↗</p>
+	<p><div class="note note2 musicnote">♫</div>	The Pillows – <a href="https://open.spotify.com/track/20H0fLyAOHzyyfcJlSWlFS?si=5549256a82164533" target="_blank">My Girl</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
