--- a/05.html
+++ b/05.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note2" style="text-indent:-2px">♫</div>	Fishmans – <a href="https://open.spotify.com/track/6Aw3fZGUZTfWcbMWDdbrpz?si=f3242b5c0fc94314" target="_blank">BABY BLUE</a> ↗</p>
+	<p><div class="note note2 musicnote">♫</div>	Fishmans – <a href="https://open.spotify.com/track/6Aw3fZGUZTfWcbMWDdbrpz?si=f3242b5c0fc94314" target="_blank">BABY BLUE</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
