--- a/06.html
+++ b/06.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note2" style="text-indent:-2px">♫</div>	Jitterin' Jinn – <a href="https://open.spotify.com/track/5LtYX9DNBpJN9LjrjwHMTO?si=e79b4eb2b7934b06" target="_blank">エヴリデイ</a> ↗</p>
+	<p><div class="note note2 musicnote">♫</div>	Jitterin' Jinn – <a href="https://open.spotify.com/track/5LtYX9DNBpJN9LjrjwHMTO?si=e79b4eb2b7934b06" target="_blank">エヴリデイ</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
