--- a/07.html
+++ b/07.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note3" style="text-indent:-2px">♫</div>	P-MODEL – <a href="https://open.spotify.com/track/6Ct69jAq9GdFipLws13L1y?si=f0d6ecfac5e54a34" target="_blank">HEAVEN</a> ↗</p>
+	<p><div class="note note3 musicnote">♫</div>	P-MODEL – <a href="https://open.spotify.com/track/6Ct69jAq9GdFipLws13L1y?si=f0d6ecfac5e54a34" target="_blank">HEAVEN</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
