--- a/09.html
+++ b/09.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note3" style="text-indent:-2px">♫</div>	MO'SOME TONEBENDER – <a href="https://open.spotify.com/track/5ZEtAUdGbXGytPTvV3Jemg?si=75f2223134c64d4d" target="_blank">ロッキンルーラ</a> ↗</p>
+	<p><div class="note note3 musicnote">♫</div>	MO'SOME TONEBENDER – <a href="https://open.spotify.com/track/5ZEtAUdGbXGytPTvV3Jemg?si=75f2223134c64d4d" target="_blank">ロッキンルーラ</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
