--- a/10.html
+++ b/10.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="song">
-	<p><div class="note note4" style="text-indent:-2px">♫</div>	Karen Aoki – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">Great Days</a> ↗</p>
+	<p><div class="note note4 musicnote">♫</div>	Karen Aoki, ハセガワ ダイスケ – <a href="https://open.spotify.com/track/1Ub6VfiTXgyV8HnsfzrZzC?si=7f88242b64194d46" target="_blank">Great Days</a> ↗</p>
 	
 	<p>
 		<label class="switch" style="vertical-align:middle;">
@@ -36,12 +36,12 @@
 
 </div><div class="verse">
 
-<p>Shining justice<ruby><rb>芽生</rb><rt>めば</rt></ruby>えて</p>
-<p>Brand new bed town<ruby><rb>交差</rb><rt>こうさ</rt></ruby>する<ruby><rb>息吹</rb><rt>いぶき</rt></ruby></p>
+<p><span class="english">Shining justice</span><ruby><rb>芽生</rb><rt>めば</rt></ruby>えて</p>
+<p><span class="english">Brand new bed town</span><ruby><rb>交差</rb><rt>こうさ</rt></ruby>する<ruby><rb>息吹</rb><rt>いぶき</rt></ruby></p>
 <p><ruby><rb>岬</rb><rt>みさき</rt></ruby>から<ruby><rb>潮風</rb><rt>しおかぜ</rt></ruby>トンネル<ruby><rb>抜</rb><rt>ぬ</rt></ruby>け<ruby><rb>鉄塔</rb><rt>てっとう</rt></ruby>へ</p>
 <p><ruby><rb>引</rb><rt>ひ</rt></ruby>かれ<ruby><rb>合</rb><rt>あ</rt></ruby>い<ruby><rb>小道</rb><rt>こみち</rt></ruby>に<ruby><rb>迷</rb><rt>まよ</rt></ruby>い<ruby><rb>込</rb><rt>こ</rt></ruby>む</p>
 <p>ココロに<ruby><rb>溶</rb><rt>と</rt></ruby>け<ruby><rb>込</rb><rt>こ</rt></ruby>む<ruby><rb>影</rb><rt>かげ</rt></ruby></p>
-<p><ruby><rb>照</rb><rt>て</rt></ruby>らす<ruby><rb>黄金</rb><rt>おうごん</rt></ruby>の"Spirits"それは<ruby><rb>守</rb><rt>まも</rt></ruby>り<ruby><rb>抜</rb><rt>ぬ</rt></ruby>く<ruby><rb>光</rb><rt>ひかり</rt></ruby></p>
+<p><ruby><rb>照</rb><rt>て</rt></ruby>らす<ruby><rb>黄金</rb><rt>おうごん</rt></ruby>の"<span class="english">Spirits</span>"それは<ruby><rb>守</rb><rt>まも</rt></ruby>り<ruby><rb>抜</rb><rt>ぬ</rt></ruby>く<ruby><rb>光</rb><rt>ひかり</rt></ruby></p>
 
 </div><div class="verse">
 
@@ -60,15 +60,15 @@
 
 </div><div class="verse">
 
-<p>Song of praises<ruby><rb>響</rb><rt>ひび</rt></ruby>かせ</p>
-<p>Brand new uptownすれ<ruby><rb>違</rb><rt>ちが</rt></ruby>う<ruby><rb>景色</rb><rt>けしき</rt></ruby></p>
+<p><span class="english">Song of praises</span><ruby><rb>響</rb><rt>ひび</rt></ruby>かせ</p>
+<p><span class="english">Brand new uptownすれ</span><ruby><rb>違</rb><rt>ちが</rt></ruby>う<ruby><rb>景色</rb><rt>けしき</rt></ruby></p>
 <p><ruby><rb>雲</rb><rt>くも</rt></ruby>の<ruby><rb>切</rb><rt>き</rt></ruby>れ<ruby><rb>間</rb><rt>ま</rt></ruby>に<ruby><rb>射</rb><rt>さ</rt></ruby>す<ruby><rb>光</rb><rt>ひかり</rt></ruby>がほら<ruby><rb>降</rb><rt>ふ</rt></ruby>り<ruby><rb>注</rb><rt>そそ</rt></ruby>ぎ</p>
 <p>イニシエの<ruby><rb>小道</rb><rt>こみち</rt></ruby>へ<ruby><rb>誘</rb><rt>さそ</rt></ruby>い<ruby><rb>込</rb><rt>こ</rt></ruby>む</p>
 
 </div><div class="verse">
 
 <p><ruby><rb>煌</rb><rt>きら</rt></ruby>めき<ruby><rb>導</rb><rt>みちび</rt></ruby>く<ruby><rb>町</rb><rt>まち</rt></ruby></p>
-<p>たぎる<ruby><rb>黄金</rb><rt>おうごん</rt></ruby>の"Spirits"それは<ruby><rb>果</rb><rt>は</rt></ruby>てしない<ruby><rb>絆</rb><rt>きずな</rt></ruby></p>
+<p>たぎる<ruby><rb>黄金</rb><rt>おうごん</rt></ruby>の"<span class="english">Spirits</span>"それは<ruby><rb>果</rb><rt>は</rt></ruby>てしない<ruby><rb>絆</rb><rt>きずな</rt></ruby></p>
 
 </div><div class="verse">
 
