--- a/12.html
+++ b/12.html
@@ -1,35 +1,100 @@
-残酷な天使のように
-少年よ 神話になれ
-蒼い風がいま 胸のドアを叩いても
-私だけをただ見つめて
-微笑んでるあなた
-そっとふれるもの もとめることに夢中で
-運命さえまだ知らない いたいけな瞳
-だけどいつか気付くでしょう その背中には
-遥か未来 めざすための羽根があること
-残酷な天使のテーゼ
-窓辺からやがて飛び立つ
-ほとばしる熱いパトスで
-思い出を裏切るなら
-この宇宙を抱いて輝く
-少年よ 神話になれ
-ずっと眠ってる 私の愛の揺りかご
-あなただけが 夢の使者に呼ばれる朝がくる
-細い首筋を 月あかりが映してる
-世界中の時を止めて 閉じこめたいけど
-もしもふたり逢えたことに意味があるなら
-私はそう 自由を知るためのバイブル
-残酷な天使のテーゼ
-悲しみがそしてはじまる
-抱きしめた命のかたち
-その夢に目覚めたとき
-誰よりも光を放つ
-少年よ 神話になれ
-人は愛をつむぎながら歴史をつくる
-女神なんてなれないまま 私は生きる
-残酷な天使のテーゼ
-窓辺からやがて飛び立つ
-ほとばしる熱いパトスで
-思い出を裏切るなら
-この宇宙を抱いて輝く
-少年よ 神話になれ
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+	<script src="script.js">
+	</script>
+</head>
+<body>
+
+<div class="song">
+	<p><div class="note note4 musicnote">♫</div>	高橋 洋子 – <a href="https://open.spotify.com/track/3x4378ztiLvFmm2nuzEI0C?si=a3f5190af67e4f73" target="_blank">残酷な天使のテーゼ</a> ↗</p>
+	
+	<p>
+		<label class="switch" style="vertical-align:middle;">
+		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
+		<span class="slider round"></span>
+		</label> <span style="font-size:16px;">furigana</span>
+	</p>
+	
+	<p style="width:350px;height:20px;">
+		<span class="words lower-elementary" style="width:23%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:22%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:19%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:26%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:7%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
+		</span>
+	</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>残酷</rb><rt>ざんこく</rt></ruby>な<ruby><rb>天使</rb><rt>てんし</rt></ruby>のように</p>
+<p><ruby><rb>少年</rb><rt>しょうねん</rt></ruby>よ<ruby><rb>神話</rb><rt>しんわ</rt></ruby>になれ</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>蒼</rb><rt>あお</rt></ruby>い<ruby><rb>風</rb><rt>かぜ</rt></ruby>がいま<ruby><rb>胸</rb><rt>むね</rt></ruby>のドアを<ruby><rb>叩</rb><rt>たた</rt></ruby>いても</p>
+<p><ruby><rb>私</rb><rt>わたし</rt></ruby>だけをただ<ruby><rb>見</rb><rt>み</rt></ruby>つめて</p>
+<p><ruby><rb>微笑</rb><rt>ほほえ</rt></ruby>んでるあなた</p>
+
+</div><div class="verse">
+
+<p>そっとふれるものもとめることに<ruby><rb>夢中</rb><rt>むちゅう</rt></ruby>で</p>
+<p><ruby><rb>運命</rb><rt>うんめい</rt></ruby>さえまだ<ruby><rb>知</rb><rt>し</rt></ruby>らないいたいけな<ruby><rb>瞳</rb><rt>ひとみ</rt></ruby></p>
+
+</div><div class="verse">
+
+<p>だけどいつか<ruby><rb>気付</rb><rt>きづ</rt></ruby>くでしょうその<ruby><rb>背中</rb><rt>せなか</rt></ruby>には</p>
+<p><ruby><rb>遥</rb><rt>はる</rt></ruby>か<ruby><rb>未来</rb><rt>みらい</rt></ruby>めざすための<ruby><rb>羽根</rb><rt>はね</rt></ruby>があること</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>残酷</rb><rt>ざんこく</rt></ruby>な<ruby><rb>天使</rb><rt>てんし</rt></ruby>のテーゼ</p>
+<p><ruby><rb>窓辺</rb><rt>まどべ</rt></ruby>からやがて<ruby><rb>飛</rb><rt>と</rt></ruby>び<ruby><rb>立</rb><rt>た</rt></ruby>つ</p>
+<p>ほとばしる<ruby><rb>熱</rb><rt>あつ</rt></ruby>いパトスで</p>
+<p><ruby><rb>思</rb><rt>おも</rt></ruby>い<ruby><rb>出</rb><rt>で</rt></ruby>を<ruby><rb>裏切</rb><rt>うらぎ</rt></ruby>るなら</p>
+<p>この<ruby><rb>宇宙</rb><rt>うちゅう</rt></ruby>を<ruby><rb>抱</rb><rt>だ</rt></ruby>いて<ruby><rb>輝</rb><rt>かがや</rt></ruby>く</p>
+<p><ruby><rb>少年</rb><rt>しょうねん</rt></ruby>よ<ruby><rb>神話</rb><rt>しんわ</rt></ruby>になれ</p>
+
+</div><div class="verse">
+
+<p>ずっと<ruby><rb>眠</rb><rt>ねむ</rt></ruby>ってる<ruby><rb>私</rb><rt>わたし</rt></ruby>の<ruby><rb>愛</rb><rt>あい</rt></ruby>の<ruby><rb>揺</rb><rt>ゆ</rt></ruby>りかご</p>
+<p>あなただけが<ruby><rb>夢</rb><rt>ゆめ</rt></ruby>の<ruby><rb>使者</rb><rt>ししゃ</rt></ruby>に<ruby><rb>呼</rb><rt>よ</rt></ruby>ばれる<ruby><rb>朝</rb><rt>あさ</rt></ruby>がくる</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>細</rb><rt>ほそ</rt></ruby>い<ruby><rb>首筋</rb><rt>くびすじ</rt></ruby>を<ruby><rb>月</rb><rt>つき</rt></ruby>あかりが<ruby><rb>映</rb><rt>うつ</rt></ruby>してる</p>
+<p><ruby><rb>世界中</rb><rt>せかいじゅう</rt></ruby>の<ruby><rb>時</rb><rt>とき</rt></ruby>を<ruby><rb>止</rb><rt>と</rt></ruby>めて<ruby><rb>閉</rb><rt>と</rt></ruby>じこめたいけど</p>
+
+</div><div class="verse">
+
+<p>もしもふたり<ruby><rb>逢</rb><rt>あ</rt></ruby>えたことに<ruby><rb>意味</rb><rt>いみ</rt></ruby>があるなら</p>
+<p><ruby><rb>私</rb><rt>わたし</rt></ruby>はそう<ruby><rb>自由</rb><rt>じゆう</rt></ruby>を<ruby><rb>知</rb><rt>し</rt></ruby>るためのバイブル</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>残酷</rb><rt>ざんこく</rt></ruby>な<ruby><rb>天使</rb><rt>てんし</rt></ruby>のテーゼ</p>
+<p><ruby><rb>悲</rb><rt>かな</rt></ruby>しみがそしてはじまる</p>
+<p><ruby><rb>抱</rb><rt>だ</rt></ruby>きしめた<ruby><rb>命</rb><rt>いのち</rt></ruby>のかたち</p>
+<p>その<ruby><rb>夢</rb><rt>ゆめ</rt></ruby>に<ruby><rb>目覚</rb><rt>めざ</rt></ruby>めたとき</p>
+<p><ruby><rb>誰</rb><rt>だれ</rt></ruby>よりも<ruby><rb>光</rb><rt>ひかり</rt></ruby>を<ruby><rb>放</rb><rt>はな</rt></ruby>つ</p>
+<p><ruby><rb>少年</rb><rt>しょうねん</rt></ruby>よ<ruby><rb>神話</rb><rt>しんわ</rt></ruby>になれ</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>人</rb><rt>ひと</rt></ruby>は<ruby><rb>愛</rb><rt>あい</rt></ruby>をつむぎながら<ruby><rb>歴史</rb><rt>れきし</rt></ruby>をつくる</p>
+<p><ruby><rb>女神</rb><rt>めがみ</rt></ruby>なんてなれないまま<ruby><rb>私</rb><rt>わたし</rt></ruby>は<ruby><rb>生</rb><rt>い</rt></ruby>きる</p>
+
+</div><div class="verse">
+
+<p><ruby><rb>残酷</rb><rt>ざんこく</rt></ruby>な<ruby><rb>天使</rb><rt>てんし</rt></ruby>のテーゼ</p>
+<p><ruby><rb>窓辺</rb><rt>まどべ</rt></ruby>からやがて<ruby><rb>飛</rb><rt>と</rt></ruby>び<ruby><rb>立</rb><rt>た</rt></ruby>つ</p>
+<p>ほとばしる<ruby><rb>熱</rb><rt>あつ</rt></ruby>いパトスで</p>
+<p><ruby><rb>思</rb><rt>おも</rt></ruby>い<ruby><rb>出</rb><rt>で</rt></ruby>を<ruby><rb>裏切</rb><rt>うらぎ</rt></ruby>るなら</p>
+<p>この<ruby><rb>宇宙</rb><rt>うちゅう</rt></ruby>を<ruby><rb>抱</rb><rt>だ</rt></ruby>いて<ruby><rb>輝</rb><rt>かがや</rt></ruby>く</p>
+<p><ruby><rb>少年</rb><rt>しょうねん</rt></ruby>よ<ruby><rb>神話</rb><rt>しんわ</rt></ruby>になれ</p>
+
+</div>
+
+</body>
+</html>
