--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<div class="song"><p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#db9c42;">˚</span><span style="color:#d3b690;">✦</span> jmix <span style="color:#d3b690;">✦</span><span style="color:#db9c42;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span></p></div>
+<div class="song"><p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#db9c42;">˚</span><span style="color:#d3b690;">✦</span> jmix <span style="color:#d3b690;">✦</span><span style="color:#db9c42;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span>&emsp;<a href="https://open.spotify.com/playlist/34TG5CqJwkBW9aBlsgtwH5?si=62190a8562964b46" target="_blank">↗</a></p></div>
 
 <div class="song">
 	
 	<p><div class="note note1">1</div><a href="01.html">Anri – 悲しみが止まらない</a>&emsp;<span class="datas">4:24</span>&emsp;<span class="datas">59 words</span></p>
 	
-	<p><div class="note note1">2</div><a href="02.html">Akiko Yano – ただいま</a>&emsp;<span class="datas">3:45</span>&emsp;<span class="datas">135 words</span></p>
+	<p><div class="note note1">2</div><a href="02.html">矢野 顕子 – ただいま</a>&emsp;<span class="datas">3:45</span>&emsp;<span class="datas">135 words</span></p>
 	
 	<p><div class="note note1">3</div><a href="03.html">GO!GO!7188 – ジェットにんぢん</a>&emsp;<span class="datas">3:30</span>&emsp;<span class="datas">88 words</span></p>
 	
@@ -26,6 +26,12 @@
 
 	<p><div class="note note3">8</div><a href="08.html">Cornelius – Sometime / Someplace</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">61 words</span></p>
 		
-	<p><div class="note note3">6</div><a href="09.html">MO'SOME TONEBENDER – ロッキンルーラ</a>&emsp;<span class="datas">2:59</span>&emsp;<span class="datas">45 words</span></p>
+	<p><div class="note note3">9</div><a href="09.html">MO'SOME TONEBENDER – ロッキンルーラ</a>&emsp;<span class="datas">2:59</span>&emsp;<span class="datas">45 words</span></p>
+	
+	<p><div class="note note4" style="text-indent:-3px">10</div><a href="10.html">Karen Aoki, ハセガワ ダイスケ – Great Days</a>&emsp;<span class="datas">4:03</span>&emsp;<span class="datas">73 words</span></p>
+
+	<p><div class="note note4" style="text-indent:-3px">11</div><a href="11.html">TWO-MIX – WHITE REFLECTION</a>&emsp;<span class="datas">4:48</span>&emsp;<span class="datas">63 words</span></p>
+		
+	<p><div class="note note4" style="text-indent:-3px">12</div><a href="12.html">高橋 洋子 – 残酷な天使のテーゼ</a>&emsp;<span class="datas">4:05</span>&emsp;<span class="datas">118 words</span></p>
 	
 </div>
