--- a/11.html
+++ b/11.html
@@ -1,36 +1,85 @@
-I FEEL YOUR LOVE REFLECTION
-見つめ返す　瞳に
-描いて　遥かな　“NEVER ENDING STORY”
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+	<script src="script.js">
+	</script>
+</head>
+<body>
 
-絶望(かなしみ)も傷跡(いたみ)も　振り切るように羽ばたく
-あなたがくれた勇気(つばさ)を　この胸に広げて…
+<div class="song">
+	<p><div class="note note4 musicnote">♫</div>	TWO-MIX – <a href="https://open.spotify.com/track/3EiY9XBtZs0nhZUbigfvc3?si=52ce57d7de394de9" target="_blank">WHITE REFLECTION</a> ↗</p>
+	
+	<p>
+		<label class="switch" style="vertical-align:middle;">
+		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
+		<span class="slider round"></span>
+		</label> <span style="font-size:16px;">furigana</span>
+	</p>
+	
+	<p style="width:350px;height:20px;">
+		<span class="words lower-elementary" style="width:9%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:14%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:14%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:43%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:18%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
+		</span>
+	</p>
 
-ああ　かけがえない愛の　煌き(こどう)を
-せつなく　くるおしく　感じていたい
+</div><div class="verse">
 
-I FEEL YOUR LOVE REFLECTION
-熱く理想(ゆめ)を　重ねて
-過ち恐れずに　求め合う青春！！
-I FEEL YOUR LOVE REFLECTION
-見つめ返す　瞳に
-描いて　遥かな　“NEVER ENDING STORY”
+<p class="english">I FEEL YOUR LOVE REFLECTION</p>
+<p><ruby><rb>見</rb><rt>み</rt></ruby>つめ<ruby><rb>返</rb><rt>かえ</rt></ruby>す　<ruby><rb>瞳</rb><rt>ひとみ</rt></ruby>に</p>
+<p><ruby><rb>描</rb><rt>えが</rt></ruby>いて　<ruby><rb>遥</rb><rt>はる</rt></ruby>かな　“<span class="english">NEVER ENDING STORY</span>”</p>
 
-あふれ出す思いを　素肌でそっと伝える
-やさしくなれる純粋さ(つよさ)を　抱きしめるみたいに…
+</div><div class="verse">
 
-ああ　激しく揺れ動く日々(じだい)を
-気高く　しなやかに　越えていきたい
+<p><s>絶望</s><ruby><rb>悲しみ</rb><rt>かなしみ</rt></ruby>も<s>傷跡</s><ruby><rb>痛み</rb><rt>いたみ</rt></ruby>も　<ruby><rb>振</rb><rt>ふ</rt></ruby>り<ruby><rb>切</rb><rt>き</rt></ruby>るように<ruby><rb>羽</rb><rt>は</rt></ruby>ばたく</p>
+<p>あなたがくれた<s>勇気</s><ruby><rb>翼</rb><rt>つばさ</rt></ruby>を　この<ruby><rb>胸</rb><rt>むね</rt></ruby>に<ruby><rb>広</rb><rt>ひろ</rt></ruby>げて…</p>
 
-I FEEL YOUR LOVE REFLECTION
-許し合える　真実
-口づけ交わしたら　もう何もいらない！！
-I FEEL YOUR LOVE REFLECTION
-あきらめない　情熱
-信じて　闘う(つらぬく)　“NEVER ENDING STORY”
+</div><div class="verse">
 
-I FEEL YOUR LOVE REFLECTION
-熱く理想(ゆめ)を　重ねて
-過ち恐れずに　求め合う青春！！
-I FEEL YOUR LOVE REFLECTION
-見つめ返す　瞳に
-描いて　遥かな　“NEVER ENDING STORY”
+<p>ああ　かけがえない<ruby><rb>愛</rb><rt>あい</rt></ruby>の　<s>煌き</s><ruby><rb>鼓動</rb><rt>こどう</rt></ruby>を</p>
+<p>せつなく　くるおしく　<ruby><rb>感</rb><rt>かん</rt></ruby>じていたい</p>
+
+</div><div class="verse">
+
+<p class="english">I FEEL YOUR LOVE REFLECTION</p>
+<p><ruby><rb>熱</rb><rt>あつ</rt></ruby>く<s>理想</s><ruby><rb>夢</rb><rt>ゆめ</rt></ruby>を　<ruby><rb>重</rb><rt>かさ</rt></ruby>ねて</p>
+<p><ruby><rb>過</rb><rt>あやま</rt></ruby>ち<ruby><rb>恐</rb><rt>おそ</rt></ruby>れずに　<ruby><rb>求</rb><rt>もと</rt></ruby>め<ruby><rb>合</rb><rt>あ</rt></ruby>う<ruby><rb>青春</rb><rt>せいしゅん</rt></ruby>！！</p>
+<p class="english">I FEEL YOUR LOVE REFLECTION</p>
+<p><ruby><rb>見</rb><rt>み</rt></ruby>つめ<ruby><rb>返</rb><rt>かえ</rt></ruby>す　<ruby><rb>瞳</rb><rt>ひとみ</rt></ruby>に</p>
+<p><ruby><rb>描</rb><rt>えが</rt></ruby>いて　<ruby><rb>遥</rb><rt>はる</rt></ruby>かな　“<span class="english">NEVER ENDING STORY</span>”</p>
+
+</div><div class="verse">
+
+<p>あふれ<ruby><rb>出</rb><rt>だ</rt></ruby>す<ruby><rb>思</rb><rt>おも</rt></ruby>いを　<ruby><rb>素肌</rb><rt>すはだ</rt></ruby>でそっと<ruby><rb>伝</rb><rt>つた</rt></ruby>える</p>
+<p>やさしくなれる<s>純粋さ</s><ruby><rb>強さ</rb><rt>つよさ</rt></ruby>を　<ruby><rb>抱</rb><rt>だ</rt></ruby>きしめるみたいに…</p>
+
+</div><div class="verse">
+
+<p>ああ　<ruby><rb>激</rb><rt>はげ</rt></ruby>しく<ruby><rb>揺</rb><rt>ゆ</rt></ruby>れ<ruby><rb>動</rb><rt>うご</rt></ruby>く<s>日々</s><ruby><rb>時代</rb><rt>じだい</rt></ruby>を</p>
+<p><ruby><rb>気高</rb><rt>けだか</rt></ruby>く　しなやかに　<ruby><rb>越</rb><rt>こ</rt></ruby>えていきたい</p>
+
+</div><div class="verse">
+
+<p class="english">I FEEL YOUR LOVE REFLECTION</p>
+<p><ruby><rb>許</rb><rt>ゆる</rt></ruby>し<ruby><rb>合</rb><rt>あ</rt></ruby>える　<ruby><rb>真実</rb><rt>しんじつ</rt></ruby></p>
+<p><ruby><rb>口</rb><rt>くち</rt></ruby>づけ<ruby><rb>交</rb><rt>か</rt></ruby>わしたら　もう<ruby><rb>何</rb><rt>なに</rt></ruby>もいらない！！</p>
+<p class="english">I FEEL YOUR LOVE REFLECTION</p>
+<p>あきらめない　<ruby><rb>情熱</rb><rt>じょうねつ</rt></ruby></p>
+<p><ruby><rb>信</rb><rt>しん</rt></ruby>じて　<s>闘う</s><ruby><rb>貫く</rb><rt>つらぬく</rt></ruby>　“<span class="english">NEVER ENDING STORY</span>”</p>
+
+</div><div class="verse">
+
+<p class="english">I FEEL YOUR LOVE REFLECTION</p>
+<p><ruby><rb>熱</rb><rt>あつ</rt></ruby>く<s>理想</s><ruby><rb>夢</rb><rt>ゆめ</rt></ruby>を　<ruby><rb>重</rb><rt>かさ</rt></ruby>ねて</p>
+<p><ruby><rb>過</rb><rt>あやま</rt></ruby>ち<ruby><rb>恐</rb><rt>おそ</rt></ruby>れずに　<ruby><rb>求</rb><rt>もと</rt></ruby>め<ruby><rb>合</rb><rt>あ</rt></ruby>う<ruby><rb>青春</rb><rt>せいしゅん</rt></ruby>！！</p>
+<p class="english">I FEEL YOUR LOVE REFLECTION</p>
+<p><ruby><rb>見</rb><rt>み</rt></ruby>つめ<ruby><rb>返</rb><rt>かえ</rt></ruby>す　<ruby><rb>瞳</rb><rt>ひとみ</rt></ruby>に</p>
+<p><ruby><rb>描</rb><rt>えが</rt></ruby>いて　<ruby><rb>遥</rb><rt>はる</rt></ruby>かな　“<span class="english">NEVER ENDING STORY</span>”</p>
+
+</div>
+
+</body>
+</html>
