--- a/01.html
+++ b/01.html
@@ -7,18 +7,18 @@
 <body>
 
 <div class="song">
-	<p><div class="note note1 musicnote">♫</div>	Anri – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">悲しみが止まらない</a> ↗</p>
+	<p><span class="note note1 musicnote">♫</span>	Anri – <a href="https://open.spotify.com/track/3FYDqY5BRtx3IVSaiQZSze?si=fb39318f40234fe8" target="_blank">悲しみが止まらない</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">59 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
 		<span class="words lower-elementary" style="width:27%;"><span class="tooltiptext lower-elementary">lower elementary</span>
-		</span><span class="words upper-elementary" style="width:33%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words upper-elementary" style="width:35%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:25%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:5%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
 		</span><span class="words lower-advanced" style="width:8%;"><span class="tooltiptext lower-advanced">lower advanced</span>
