--- a/02.html
+++ b/02.html
@@ -7,18 +7,18 @@
 <body>
 
 <div class="song">
-	<p><div class="note note1 musicnote">♫</div>	矢野 顕子 – <a href="https://open.spotify.com/track/12HduUydL4ITzch9Rei3lt?si=4b7810ec36b64c6a" target="_blank">ただいま</a> ↗</p>
+	<p><span class="note note1 musicnote">♫</span>	矢野 顕子 – <a href="https://open.spotify.com/track/12HduUydL4ITzch9Rei3lt?si=4b7810ec36b64c6a" target="_blank">ただいま</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">135 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
 		<span class="words lower-elementary" style="width:22%;"><span class="tooltiptext lower-elementary">lower elementary</span>
-		</span><span class="words upper-elementary" style="width:28%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words upper-elementary" style="width:31%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:22%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:20%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
 		</span><span class="words lower-advanced" style="width:5%;"><span class="tooltiptext lower-advanced">lower advanced</span>
