--- a/03.html
+++ b/03.html
@@ -7,17 +7,17 @@
 <body>
 
 <div class="song">
-	<p><div class="note note1 musicnote">♫</div>	GO!GO!7188 – <a href="https://open.spotify.com/track/4dbYEeyp0Ercj2zBp5x8Xh?si=655ebbea4a9746de" target="_blank">ジェットにんぢん</a> ↗</p>
+	<p><span class="note note1 musicnote">♫</span>	GO!GO!7188 – <a href="https://open.spotify.com/track/4dbYEeyp0Ercj2zBp5x8Xh?si=655ebbea4a9746de" target="_blank">ジェットにんぢん</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">88 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:27%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		<span class="words lower-elementary" style="width:28%;"><span class="tooltiptext lower-elementary">lower elementary</span>
 		</span><span class="words upper-elementary" style="width:17%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:25%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:13%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
