--- a/04.html
+++ b/04.html
@@ -7,17 +7,17 @@
 <body>
 
 <div class="song">
-	<p><div class="note note2 musicnote">♫</div>	The Pillows – <a href="https://open.spotify.com/track/20H0fLyAOHzyyfcJlSWlFS?si=5549256a82164533" target="_blank">My Girl</a> ↗</p>
+	<p><span class="note note2 musicnote">♫</span>	The Pillows – <a href="https://open.spotify.com/track/20H0fLyAOHzyyfcJlSWlFS?si=5549256a82164533" target="_blank">My Girl</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">37 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:40%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		<span class="words lower-elementary" style="width:42%;"><span class="tooltiptext lower-elementary">lower elementary</span>
 		</span><span class="words upper-elementary" style="width:24%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:10%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:24%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
