--- a/07.html
+++ b/07.html
@@ -7,19 +7,19 @@
 <body>
 
 <div class="song">
-	<p><div class="note note3 musicnote">♫</div>	P-MODEL – <a href="https://open.spotify.com/track/6Ct69jAq9GdFipLws13L1y?si=f0d6ecfac5e54a34" target="_blank">HEAVEN</a> ↗</p>
+	<p><span class="note note3 musicnote">♫</span>	P-MODEL – <a href="https://open.spotify.com/track/6Ct69jAq9GdFipLws13L1y?si=f0d6ecfac5e54a34" target="_blank">HEAVEN</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">73 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
 		<span class="words lower-elementary" style="width:16%;"><span class="tooltiptext lower-elementary">lower elementary</span>
 		</span><span class="words upper-elementary" style="width:13%;"><span class="tooltiptext upper-elementary">upper elementary</span>
-		</span><span class="words lower-intermediate" style="width:32%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words lower-intermediate" style="width:35%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:23%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
 		</span><span class="words lower-advanced" style="width:13%;"><span class="tooltiptext lower-advanced">lower advanced</span>
 		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
