--- a/08.html
+++ b/08.html
@@ -7,17 +7,17 @@
 <body>
 
 <div class="song">
-	<p><div class="note note3 musicnote">♫</div>	Cornelius – <a href="https://open.spotify.com/track/436KJdH0b8Xhnwio7Oq2UK?si=9e80c5cf24274f01" target="_blank">Sometime / Someplace</a> ↗</p>
+	<p><span class="note note3 musicnote">♫</span>	Cornelius – <a href="https://open.spotify.com/track/436KJdH0b8Xhnwio7Oq2UK?si=9e80c5cf24274f01" target="_blank">Sometime / Someplace</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">61 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:62%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		<span class="words lower-elementary" style="width:65%;"><span class="tooltiptext lower-elementary">lower elementary</span>
 		</span><span class="words upper-elementary" style="width:9%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:14%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:11%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
