--- a/09.html
+++ b/09.html
@@ -7,18 +7,18 @@
 <body>
 
 <div class="song">
-	<p><div class="note note3 musicnote">♫</div>	MO'SOME TONEBENDER – <a href="https://open.spotify.com/track/5ZEtAUdGbXGytPTvV3Jemg?si=75f2223134c64d4d" target="_blank">ロッキンルーラ</a> ↗</p>
+	<p><span class="note note3 musicnote">♫</span>	MO'SOME TONEBENDER – <a href="https://open.spotify.com/track/5ZEtAUdGbXGytPTvV3Jemg?si=75f2223134c64d4d" target="_blank">ロッキンルーラ</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">45 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
 		<span class="words lower-elementary" style="width:20%;"><span class="tooltiptext lower-elementary">lower elementary</span>
-		</span><span class="words upper-elementary" style="width:26%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words upper-elementary" style="width:28%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:13%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:26%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
 		</span><span class="words lower-advanced" style="width:11%;"><span class="tooltiptext lower-advanced">lower advanced</span>
