--- a/10.html
+++ b/10.html
@@ -7,20 +7,20 @@
 <body>
 
 <div class="song">
-	<p><div class="note note4 musicnote">♫</div>	Karen Aoki, ハセガワ ダイスケ – <a href="https://open.spotify.com/track/1Ub6VfiTXgyV8HnsfzrZzC?si=7f88242b64194d46" target="_blank">Great Days</a> ↗</p>
+	<p><span class="note note4 musicnote">♫</span>	Karen Aoki, ハセガワ ダイスケ – <a href="https://open.spotify.com/track/1Ub6VfiTXgyV8HnsfzrZzC?si=7f88242b64194d46" target="_blank">Great Days</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">73 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
 		<span class="words lower-elementary" style="width:26%;"><span class="tooltiptext lower-elementary">lower elementary</span>
 		</span><span class="words upper-elementary" style="width:16%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:13%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
-		</span><span class="words upper-intermediate" style="width:27%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words upper-intermediate" style="width:29%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
 		</span><span class="words lower-advanced" style="width:16%;"><span class="tooltiptext lower-advanced">lower advanced</span>
 		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
 		</span>
