--- a/11.html
+++ b/11.html
@@ -7,21 +7,21 @@
 <body>
 
 <div class="song">
-	<p><div class="note note4 musicnote">♫</div>	TWO-MIX – <a href="https://open.spotify.com/track/3EiY9XBtZs0nhZUbigfvc3?si=52ce57d7de394de9" target="_blank">WHITE REFLECTION</a> ↗</p>
+	<p><span class="note note4 musicnote">♫</span>	TWO-MIX – <a href="https://open.spotify.com/track/3EiY9XBtZs0nhZUbigfvc3?si=52ce57d7de394de9" target="_blank">WHITE REFLECTION</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">53 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:9%;"><span class="tooltiptext lower-elementary">lower elementary</span>
-		</span><span class="words upper-elementary" style="width:14%;"><span class="tooltiptext upper-elementary">upper elementary</span>
-		</span><span class="words lower-intermediate" style="width:14%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
-		</span><span class="words upper-intermediate" style="width:43%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
-		</span><span class="words lower-advanced" style="width:18%;"><span class="tooltiptext lower-advanced">lower advanced</span>
+		<span class="words lower-elementary" style="width:11%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		</span><span class="words upper-elementary" style="width:15%;"><span class="tooltiptext upper-elementary">upper elementary</span>
+		</span><span class="words lower-intermediate" style="width:16%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
+		</span><span class="words upper-intermediate" style="width:36%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words lower-advanced" style="width:22%;"><span class="tooltiptext lower-advanced">lower advanced</span>
 		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
 		</span>
 	</p>
