--- a/12.html
+++ b/12.html
@@ -7,20 +7,20 @@
 <body>
 
 <div class="song">
-	<p><div class="note note4 musicnote">♫</div>	高橋 洋子 – <a href="https://open.spotify.com/track/3x4378ztiLvFmm2nuzEI0C?si=a3f5190af67e4f73" target="_blank">残酷な天使のテーゼ</a> ↗</p>
+	<p><span class="note note4 musicnote">♫</span>	高橋 洋子 – <a href="https://open.spotify.com/track/3x4378ztiLvFmm2nuzEI0C?si=a3f5190af67e4f73" target="_blank">残酷な天使のテーゼ</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">181 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
 		<span class="words lower-elementary" style="width:23%;"><span class="tooltiptext lower-elementary">lower elementary</span>
 		</span><span class="words upper-elementary" style="width:22%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:19%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
-		</span><span class="words upper-intermediate" style="width:26%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
+		</span><span class="words upper-intermediate" style="width:29%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
 		</span><span class="words lower-advanced" style="width:7%;"><span class="tooltiptext lower-advanced">lower advanced</span>
 		</span><span class="words upper-advanced" style="width:0%;"><span class="tooltiptext upper-advanced">upper advanced</span>
 		</span>
