--- a/index.html
+++ b/index.html
@@ -6,32 +6,41 @@
 </head>
 <body>
 
-<div class="song"><p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#db9c42;">˚</span><span style="color:#d3b690;">✦</span> jmix <span style="color:#d3b690;">✦</span><span style="color:#db9c42;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span>&emsp;<a href="https://open.spotify.com/playlist/34TG5CqJwkBW9aBlsgtwH5?si=62190a8562964b46" target="_blank">↗</a></p></div>
+<div class="song">
+	<p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#db9c42;">˚</span><span style="color:#d3b690;">✦</span> jmix <span style="color:#d3b690;">✦</span><span style="color:#db9c42;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span><p>
+		<p><a href="https://open.spotify.com/playlist/34TG5CqJwkBW9aBlsgtwH5?si=62190a8562964b46" target="_blank">Listen here</a>&emsp;↗</p>
+</div>
 
 <div class="song">
 	
-	<p><div class="note note1">1</div><a href="01.html">Anri – 悲しみが止まらない</a>&emsp;<span class="datas">4:24</span>&emsp;<span class="datas">59 words</span></p>
+	<p class="track"><span class="note note1">1</span><a href="01.html">Anri – 悲しみが止まらない</a>&emsp;<span class="datas">4:24</span>&emsp;<span class="datas">59 words</span></p>
 	
-	<p><div class="note note1">2</div><a href="02.html">矢野 顕子 – ただいま</a>&emsp;<span class="datas">3:45</span>&emsp;<span class="datas">135 words</span></p>
+	<p class="track"><span class="note note1">2</span><a href="02.html">矢野 顕子 – ただいま</a>&emsp;<span class="datas">3:45</span>&emsp;<span class="datas">135 words</span></p>
 	
-	<p><div class="note note1">3</div><a href="03.html">GO!GO!7188 – ジェットにんぢん</a>&emsp;<span class="datas">3:30</span>&emsp;<span class="datas">88 words</span></p>
+	<p class="track"><span class="note note1">3</span><a href="03.html">GO!GO!7188 – ジェットにんぢん</a>&emsp;<span class="datas">3:30</span>&emsp;<span class="datas">88 words</span></p>
 	
-	<p><div class="note note2">4</div><a href="04.html">The Pillows – My Girl</a>&emsp;<span class="datas">4:30</span>&emsp;<span class="datas">37 words</span></p>
+	<p class="track"><span class="note note2">4</span><a href="04.html">The Pillows – My Girl</a>&emsp;<span class="datas">4:30</span>&emsp;<span class="datas">37 words</span></p>
 	
-	<p><div class="note note2">5</div><a href="05.html">Fishmans – BABY BLUE</a>&emsp;<span class="datas">6:09</span>&emsp;<span class="datas">69 words</span></p>
+	<p class="track"><span class="note note2">5</span><a href="05.html">Fishmans – BABY BLUE</a>&emsp;<span class="datas">6:09</span>&emsp;<span class="datas">69 words</span></p>
 	
-	<p><div class="note note2">6</div><a href="06.html">Jitterin' Jinn – エヴリデイ</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">73 words</span></p>
+	<p class="track"><span class="note note2">6</span><a href="06.html">Jitterin' Jinn – エヴリデイ</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">73 words</span></p>
 	
-	<p><div class="note note3">7</div><a href="07.html">P-MODEL – HEAVEN</a>&emsp;<span class="datas">3:31</span>&emsp;<span class="datas">73 words</span></p>
+	<p class="track"><span class="note note3">7</span><a href="07.html">P-MODEL – HEAVEN</a>&emsp;<span class="datas">3:31</span>&emsp;<span class="datas">73 words</span></p>
 
-	<p><div class="note note3">8</div><a href="08.html">Cornelius – Sometime / Someplace</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">61 words</span></p>
+	<p class="track"><span class="note note3">8</span><a href="08.html">Cornelius – Sometime / Someplace</a>&emsp;<span class="datas">3:49</span>&emsp;<span class="datas">61 words</span></p>
 		
-	<p><div class="note note3">9</div><a href="09.html">MO'SOME TONEBENDER – ロッキンルーラ</a>&emsp;<span class="datas">2:59</span>&emsp;<span class="datas">45 words</span></p>
+	<p class="track"><span class="note note3">9</span><a href="09.html">MO'SOME TONEBENDER – ロッキンルーラ</a>&emsp;<span class="datas">2:59</span>&emsp;<span class="datas">45 words</span></p>
 	
-	<p><div class="note note4" style="text-indent:-3px">10</div><a href="10.html">Karen Aoki, ハセガワ ダイスケ – Great Days</a>&emsp;<span class="datas">4:03</span>&emsp;<span class="datas">73 words</span></p>
+	<p class="track"><span class="note note4" style="text-indent:-3px">10</span><a href="10.html">Karen Aoki, ハセガワ ダイスケ – Great Days</a>&emsp;<span class="datas">4:03</span>&emsp;<span class="datas">73 words</span></p>
 
-	<p><div class="note note4" style="text-indent:-3px">11</div><a href="11.html">TWO-MIX – WHITE REFLECTION</a>&emsp;<span class="datas">4:48</span>&emsp;<span class="datas">63 words</span></p>
+	<p class="track"><span class="note note4" style="text-indent:-3px">11</span><a href="11.html">TWO-MIX – WHITE REFLECTION</a>&emsp;<span class="datas">4:48</span>&emsp;<span class="datas">53 words</span></p>
 		
-	<p><div class="note note4" style="text-indent:-3px">12</div><a href="12.html">高橋 洋子 – 残酷な天使のテーゼ</a>&emsp;<span class="datas">4:05</span>&emsp;<span class="datas">118 words</span></p>
+	<p class="track"><span class="note note4" style="text-indent:-3px">12</span><a href="12.html">高橋 洋子 – 残酷な天使のテーゼ</a>&emsp;<span class="datas">4:05</span>&emsp;<span class="datas">118 words</span></p>
+	
+	<p class="track"><span class="note note5" style="text-indent:-3px">13</span><a href="13.html">Y.M.O. – 君に、胸キュン。</a>&emsp;<span class="datas">4:09</span>&emsp;<span class="datas">61 words</span></p>
+	
+	<p class="track"><span class="note note5" style="text-indent:-3px">14</span><a href="14.html">細野 晴臣 – はらいそ</a>&emsp;<span class="datas">4:40</span>&emsp;<span class="datas">51 words</span></p>
+	
+	<p class="track"><span class="note note5" style="text-indent:-3px">15</span><a href="15.html">高橋 幸宏 – 回想</a>&emsp;<span class="datas">5:18</span>&emsp;<span class="datas">71 words</span></p>
 	
 </div>
