--- a/06.html
+++ b/06.html
@@ -7,17 +7,17 @@
 <body>
 
 <div class="song">
-	<p><div class="note note2 musicnote">♫</div>	Jitterin' Jinn – <a href="https://open.spotify.com/track/5LtYX9DNBpJN9LjrjwHMTO?si=e79b4eb2b7934b06" target="_blank">エヴリデイ</a> ↗</p>
+	<p><span class="note note2 musicnote">♫</span>	Jitterin' Jinn – <a href="https://open.spotify.com/track/5LtYX9DNBpJN9LjrjwHMTO?si=e79b4eb2b7934b06" target="_blank">エヴリデイ</a>&emsp;↗</p>
 	
-	<p>
-		<label class="switch" style="vertical-align:middle;">
+	<p style="width:350px;">
+		<label class="switch">
 		<input type="checkbox" id="myCheck" onclick="toggle_furigana()">
 		<span class="slider round"></span>
-		</label> <span style="font-size:16px;">furigana</span>
+		</label> <span style="font-size:16px;">furigana</span><span style="float:right;">73 words</span>
 	</p>
 	
 	<p style="width:350px;height:20px;">
-		<span class="words lower-elementary" style="width:34%;"><span class="tooltiptext lower-elementary">lower elementary</span>
+		<span class="words lower-elementary" style="width:36%;"><span class="tooltiptext lower-elementary">lower elementary</span>
 		</span><span class="words upper-elementary" style="width:20%;"><span class="tooltiptext upper-elementary">upper elementary</span>
 		</span><span class="words lower-intermediate" style="width:31%;"><span class="tooltiptext lower-intermediate">lower intermediate</span>
 		</span><span class="words upper-intermediate" style="width:12%;"><span class="tooltiptext upper-intermediate">upper intermediate</span>
